kubernetes-manifests/orsem-django-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orsem-django-v2
  labels:
    app: orsem-django
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orsem-django
      version: v2
  template:
    metadata:
      labels:
        app: orsem-django
        version: v2
    spec:
      containers:
        - name: orsem-django-container
          image: panghuuuuu/orsem-django:latest
          ports:
            - containerPort: 8080
              protocol: TCP
