kubernetes-manifests/orsem-django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orsem-django
  labels:
    app: orsem-django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orsem-django
  template:
    metadata:
      labels:
        app: orsem-django
    spec:
      containers:
        - name: orsem-django-container
          image: panghuuuuu/orsem-django:latest
          ports:
            - containerPort: 8080
