kubernetes-manifests/orsem-react-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orsem-react-v2
  labels:
    app: orsem-react
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orsem-react
      version: v2
  template:
    metadata:
      labels:
        app: orsem-react
        version: v2
    spec:
      containers:
        - name: orsem-react-container
          image: panghuuuuu/orsem-react:latest
          ports:
            - containerPort: 3000
              protocol: TCP
