kubernetes-manifests/orsem-react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orsem-react
  labels:
    app: orsem-react
spec:
  replicas: 3
  selector:
    matchLabels:
      app: orsem-react
  template:
    metadata:
      labels:
        app: orsem-react
    spec:
      containers:
        - name: orsem-react-container
          image: panghuuuuu/orsem-react:latest
          ports:
            - containerPort: 3000
