kubernetes-manifests/orsem-django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orsem-django
spec:
  selector:
    app: orsem-django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
