kubernetes-manifests/orsem-react-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orsem-react
spec:
  selector:
    app: orsem-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
