kubernetes-manifests/orsem-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orsem-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: "global-ingress"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: orsem-django-lb
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orsem-react-lb
                port:
                  number: 80
